LPS-136872 Fixed the impact of LPS-136872 on other former gradleTests

--- a/modules/sdk/gradle-plugins-workspace/src/gradleTest/verifyBundleChecksumBad/build.gradle
+++ b/modules/sdk/gradle-plugins-workspace/src/gradleTest/verifyBundleChecksumBad/build.gradle
@@ -3,6 +3,7 @@ task runGradleTest
 String errorMessage = ""
 
 gradle.liferayWorkspace {
+	product = "portal-7.1-ga3"
 	bundleChecksumMD5 = "bad_md5sum"
 }
 
