--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -3493,6 +3493,7 @@ export-script=Export Script
 export-templates=Export Templates
 export-the-selected-data-to-the-given-lar-file-name=Export the selected data to the given LAR file name.
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal.
+export-translation=Export Translation
 export-users=Export Users
 expose-global=Expose Global
 expression=Expression
@@ -7844,6 +7845,7 @@ select-entry=Select Entry
 select-existing-content-or-add-terms-of-use-in-the-space-below=Select existing content or add terms of use in the space below.
 select-existing-content-or-add-the-url-below=Select existing content or add the URL below.
 select-experience=Select Experience
+select-experiences=Select Experiences
 select-field-type-description=Select options from a list.
 select-field-type-label=Select from List
 select-filter=Select Filter
