--- a/modules/apps/journal/journal-web/package.json
+++ b/modules/apps/journal/journal-web/package.json
@@ -16,8 +16,7 @@
 		"frontend-js-web": "*",
 		"metal-state": "2.16.8",
 		"prop-types": "15.7.2",
-		"react": "16.12.0",
-		"translation-web": "*"
+		"react": "16.12.0"
 	},
 	"name": "journal-web",
 	"scripts": {
