--- a/modules/apps/layout/layout-admin-web/package.json
+++ b/modules/apps/layout/layout-admin-web/package.json
@@ -17,8 +17,7 @@
 		"prop-types": "15.7.2",
 		"react": "16.12.0",
 		"react-dnd": "11.1.1",
-		"react-dnd-html5-backend": "11.1.1",
-		"translation-web": "*"
+		"react-dnd-html5-backend": "11.1.1"
 	},
 	"name": "layout-admin-web",
 	"scripts": {
