--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -9007,6 +9007,7 @@ the-selected-image-was-deleted=The selected image was deleted.
 the-selected-image-was-moved-to-the-recycle-bin=The selected image was moved to the Recycle Bin.
 the-selected-menu-does-not-exist=The selected menu does not exist.
 the-selected-organization-is-associated-with-deactivated-users.-do-you-want-to-proceed-with-deleting-the-selected-organization-by-automatically-unassociating-the-deactivated-users=The selected organization is associated with deactivated users. Do you want to proceed with deleting the selected organization by automatically unassociating the deactivated users?
+the-selected-root-folder-cannot-be-found-please-select-another-one=The selected Root Folder cannot be found. Please select another one.
 the-selected-root-folder-is-in-the-recycle-bin-please-remove-it-or-select-another-one=The selected Root Folder is in the Recycle Bin. Please remove it or select another one.
 the-selected-step-has-transitioned-successfully=The selected step has transitioned successfully.
 the-selected-steps-have-transitioned-successfully=The selected steps have transitioned successfully.
