--- a/portal-impl/src/portal-liferay-online.properties
+++ b/portal-impl/src/portal-liferay-online.properties
@@ -163,6 +163,12 @@ configuration.override.com.liferay.portal.bundle.blacklist.internal.configuratio
     "com.liferay.staging.processes.web",\
 ]
 
+configuration.override.com.liferay.portal.security.audit.router.configuration.LoggingAuditMessageProcessorConfiguration_enabled=B"true"
+configuration.override.com.liferay.portal.security.audit.router.configuration.LoggingAuditMessageProcessorConfiguration_logMessageFormat="JSON"
+configuration.override.com.liferay.portal.security.audit.router.configuration.LoggingAuditMessageProcessorConfiguration_outputToConsole=B"true"
+
+configuration.override.com.liferay.portal.security.audit.router.configuration.PersistentAuditMessageProcessorConfiguration_enabled=B"false"
+
 configuration.override.com.liferay.portal.template.freemarker.configuration.FreeMarkerEngineConfiguration_restrictedVariables=[\
     "httpUtilUnsafe",\
     "staticFieldGetter",\
