LPS-140224 Changing messages of Repeatable fields

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -360,6 +360,7 @@ add-document=Add Document
 add-document-type=Add Document Type
 add-domain=Add Domain
 add-draft=Add Draft
+add-duplicate-field=Add duplicate field {0}
 add-elements=Add Elements
 add-event=Add Event
 add-existing-account=Add Existing Account
@@ -7313,6 +7314,7 @@ remoteIPInfo=Remote IP
 remove-access=Remove Access
 remove-all-items=Remove All Items
 remove-all-registered-fido2-authenticators=Remove All Registered FIDO2 Authenticators
+remove-duplicate-field=Remove duplicate field {0}
 remove-expired-journal-articles=Remove expired journal articles.
 remove-favorite=Remove Favorite
 remove-field=Remove Field
