LPS-140352 Import Liferay Object data

--- a/modules/apps/site-initializer/site-initializer-extender/site-initializer-extender/build.gradle
+++ b/modules/apps/site-initializer/site-initializer-extender/site-initializer-extender/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	compileOnly project(":apps:layout:layout-api")
 	compileOnly project(":apps:layout:layout-page-template-api")
 	compileOnly project(":apps:object:object-admin-rest-api")
+	compileOnly project(":apps:object:object-api")
 	compileOnly project(":apps:portal-security:portal-security-service-access-policy-api")
 	compileOnly project(":apps:portal-vulcan:portal-vulcan-api")
 	compileOnly project(":apps:remote-app:remote-app-api")
