LPS-140007 - Add missing language keys.

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -10815,3 +10815,5 @@ zoom-in=Zoom In
 zoom-out=Zoom Out
 zoom-to-fit=Zoom to Fit
 color-focus=Color Focus
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2
+color-brand-primary-darken-2=Color Brand Primary Darken 2
