LPS-140007 - Apply consistent focus state for all focusable elements.

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -2368,7 +2368,7 @@ custom-contact-mapping=Custom Contact Mapping
 custom-control=Custom Control
 custom-control-border-color=Custom Control Border Color
 custom-control-disabled-border-color=Custom Control Disabled Border Color
-custom-control-focus-color=Custom Control Focus Color
+custom-control-hover-color=Custom Control Hover Color
 custom-control-label-color=Custom Control Label Color
 custom-control-label-font-size=Custom Control Label Font Size
 custom-control-label-font-weight=Custom Control Label Font Weight
@@ -10814,3 +10814,4 @@ your-user-x-could-not-be-signed-in=Your user {0} could not be signed in.
 zoom-in=Zoom In
 zoom-out=Zoom Out
 zoom-to-fit=Zoom to Fit
+color-focus=Color Focus
