--- a/modules/apps/frontend-theme/frontend-theme-dialect/build.gradle
+++ b/modules/apps/frontend-theme/frontend-theme-dialect/build.gradle
@@ -7,6 +7,7 @@ task copyClassicTheme(type: Copy)
 copyClassicTheme {
 	from("../frontend-theme-classic/src/") {
 		exclude "**/WEB-INF/**"
+		exclude "/images/**"
 	}
 
 	includeEmptyDirs = false
