--- a/modules/.releng/apps/fragment/fragment-collection-filter-date/artifact.properties
+++ b/modules/.releng/apps/fragment/fragment-collection-filter-date/artifact.properties
@@ -1,4 +1,5 @@
-artifact.git.id=b3b9a53abd69bf7c92cbed7e758ea3caf9c3f197
-artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.collection.filter.date/1.0.4/com.liferay.fragment.collection.filter.date-1.0.4-sources-commercial.jar
-artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.collection.filter.date/1.0.4/com.liferay.fragment.collection.filter.date-1.0.4-sources.jar
-artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.collection.filter.date/1.0.4/com.liferay.fragment.collection.filter.date-1.0.4.jar
+artifact.git.id=e5b7ca31c89553c136230aa5f169dd2da48ca23a
+artifact.jspc.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.collection.filter.date/1.0.5/com.liferay.fragment.collection.filter.date-1.0.5-jspc.jar
+artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.collection.filter.date/1.0.5/com.liferay.fragment.collection.filter.date-1.0.5-sources-commercial.jar
+artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.collection.filter.date/1.0.5/com.liferay.fragment.collection.filter.date-1.0.5-sources.jar
+artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.collection.filter.date/1.0.5/com.liferay.fragment.collection.filter.date-1.0.5.jar
