artifact:ignore fragment-renderer-collection-filter-impl 1.0.7 artifact properties

--- a/modules/.releng/apps/fragment/fragment-renderer-collection-filter-impl/artifact.properties
+++ b/modules/.releng/apps/fragment/fragment-renderer-collection-filter-impl/artifact.properties
@@ -1,4 +1,5 @@
-artifact.git.id=79077a3bcc1b634b3105dba962699dbe167d6e17
-artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.renderer.collection.filter.impl/1.0.6/com.liferay.fragment.renderer.collection.filter.impl-1.0.6-sources-commercial.jar
-artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.renderer.collection.filter.impl/1.0.6/com.liferay.fragment.renderer.collection.filter.impl-1.0.6-sources.jar
-artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.renderer.collection.filter.impl/1.0.6/com.liferay.fragment.renderer.collection.filter.impl-1.0.6.jar
+artifact.git.id=8643cf8e4ce7dd416c5f2f76000443a0dff7587f
+artifact.jspc.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.renderer.collection.filter.impl/1.0.7/com.liferay.fragment.renderer.collection.filter.impl-1.0.7-jspc.jar
+artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.renderer.collection.filter.impl/1.0.7/com.liferay.fragment.renderer.collection.filter.impl-1.0.7-sources-commercial.jar
+artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.renderer.collection.filter.impl/1.0.7/com.liferay.fragment.renderer.collection.filter.impl-1.0.7-sources.jar
+artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.fragment.renderer.collection.filter.impl/1.0.7/com.liferay.fragment.renderer.collection.filter.impl-1.0.7.jar
