--- a/modules/.releng/apps/asset/asset-list-item-selector-web/artifact.properties
+++ b/modules/.releng/apps/asset/asset-list-item-selector-web/artifact.properties
@@ -1,4 +1,5 @@
-artifact.git.id=1e5f09febc859a345938128674f0ffe8ab0bfc48
-artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.asset.list.item.selector.web/2.0.5/com.liferay.asset.list.item.selector.web-2.0.5-sources-commercial.jar
-artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.asset.list.item.selector.web/2.0.5/com.liferay.asset.list.item.selector.web-2.0.5-sources.jar
-artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.asset.list.item.selector.web/2.0.5/com.liferay.asset.list.item.selector.web-2.0.5.jar
+artifact.git.id=d375f45103909b807813993b87e0d1f7fb59c63d
+artifact.jspc.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.asset.list.item.selector.web/2.0.6/com.liferay.asset.list.item.selector.web-2.0.6-jspc.jar
+artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.asset.list.item.selector.web/2.0.6/com.liferay.asset.list.item.selector.web-2.0.6-sources-commercial.jar
+artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.asset.list.item.selector.web/2.0.6/com.liferay.asset.list.item.selector.web-2.0.6-sources.jar
+artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.asset.list.item.selector.web/2.0.6/com.liferay.asset.list.item.selector.web-2.0.6.jar
