--- a/modules/.releng/apps/info/info-collection-provider-item-selector-web/artifact.properties
+++ b/modules/.releng/apps/info/info-collection-provider-item-selector-web/artifact.properties
@@ -1,4 +1,5 @@
-artifact.git.id=a789d611ce7373a7d62bb47db0d32c6f7ac48559
-artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.info.collection.provider.item.selector.web/1.0.6/com.liferay.info.collection.provider.item.selector.web-1.0.6-sources-commercial.jar
-artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.info.collection.provider.item.selector.web/1.0.6/com.liferay.info.collection.provider.item.selector.web-1.0.6-sources.jar
-artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.info.collection.provider.item.selector.web/1.0.6/com.liferay.info.collection.provider.item.selector.web-1.0.6.jar
+artifact.git.id=c668e50e800745a9114a59ff53d6a134aecc2f4b
+artifact.jspc.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.info.collection.provider.item.selector.web/1.0.7/com.liferay.info.collection.provider.item.selector.web-1.0.7-jspc.jar
+artifact.sources-commercial.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.info.collection.provider.item.selector.web/1.0.7/com.liferay.info.collection.provider.item.selector.web-1.0.7-sources-commercial.jar
+artifact.sources.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.info.collection.provider.item.selector.web/1.0.7/com.liferay.info.collection.provider.item.selector.web-1.0.7-sources.jar
+artifact.url=https://repository-cdn.liferay.com/nexus/content/repositories/liferay-public-releases/com/liferay/com.liferay.info.collection.provider.item.selector.web/1.0.7/com.liferay.info.collection.provider.item.selector.web-1.0.7.jar
