COMMERCE-7414 Added new localized key

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -2004,6 +2004,7 @@ commerce-order=Commerce Order
 commerce-order-content-web-portlet-instance-configuration-name=Placed Orders
 commerce-order-items=Commerce Order Items
 commerce-order-items-help=Represents the list of commerce order items that is displayed.
+commerce-order-rule-entry-configuration-name=Order Rules
 commerce-order-type-configuration-name=Order Types
 commerce-orders=Commerce Orders
 commerce-organization-open-order-web-portlet-instance-configuration-name=Commerce Organization Open Order
