COMMERCE-7414 Build lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Porudžbine
 commerce-order-items=Commerce Order Items (Automatic Copy)
 commerce-order-items-help=Represents the list of commerce order items that is displayed. (Automatic Copy)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Commerce Orders (Automatic Copy)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Commerce Organization Open Order (Automatic Copy)
