--- a/modules/apps/site-initializer/site-initializer-extender/site-initializer-extender/build.gradle
+++ b/modules/apps/site-initializer/site-initializer-extender/site-initializer-extender/build.gradle
@@ -31,5 +31,6 @@ dependencies {
 	compileOnly project(":apps:site-navigation:site-navigation-menu-item-api")
 	compileOnly project(":apps:site:site-api")
 	compileOnly project(":apps:style-book:style-book-api")
+	compileOnly project(":core:petra:petra-function")
 	compileOnly project(":core:petra:petra-string")
 }
