--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -1917,13 +1917,25 @@ color-neutral-9=Color Neutral 9
 color-neutral-10=Color Neutral 10
 color-scheme=Color Scheme
 color-state-error=Color State Error
-color-state-error-lighten=Color State Error Lighten
+color-state-error-darken-1=Color State Error Darken 1
+color-state-error-darken-2=Color State Error Darken 2
+color-state-error-lighten-1=Color State Error Lighten 1
+color-state-error-lighten-2=Color State Error Lighten 2
 color-state-info=Color State Info
-color-state-info-lighten=Color State Info Lighten
+color-state-info-darken-1=Color State Info Darken 1
+color-state-info-darken-2=Color State Info Darken 2
+color-state-info-lighten-1=Color State Info Lighten 1
+color-state-info-lighten-2=Color State Info Lighten 2
 color-state-success=Color State Success
-color-state-success-lighten=Color State Success Lighten
+color-state-success-darken-1=Color State Success Darken 1
+color-state-success-darken-2=Color State Success Darken 2
+color-state-success-lighten-1=Color State Success Lighten 1
+color-state-success-lighten-2=Color State Success Lighten 2
 color-state-warning=Color State Warning
-color-state-warning-lighten=Color State Warning Lighten
+color-state-warning-darken-1=Color State Warning Darken 1
+color-state-warning-darken-2=Color State Warning Darken 2
+color-state-warning-lighten-1=Color State Warning Lighten 1
+color-state-warning-lighten-2=Color State Warning Lighten 2
 color-system=Color System
 com.liferay.configuration.admin.web.test.attribute.description=Test_Attribute_Description
 com.liferay.configuration.admin.web.test.attribute.name=Test_Attribute_Name
