LPS-138918 Update source formatter properties

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -396,7 +396,10 @@
         modules/apps/commerce,\
         modules/dxp/apps/commerce,\
         modules/dxp/apps/commerce-demo-pack,\
-        modules/dxp/apps/commerce-punchout
+        modules/dxp/apps/commerce-punchout,\
+        modules/dxp/apps/portal-search-elasticsearch-cross-cluster-replication,\
+        modules/dxp/apps/portal-search-elasticsearch-monitoring,\
+        modules/dxp/apps/portal-search-learning-to-rank
 
     source.check.BNDLiferayRelengCategoryCheck.allowedLiferayRelengCategoryNames=\
         Communication,\
@@ -438,7 +441,10 @@
         modules/apps/commerce,\
         modules/dxp/apps/commerce,\
         modules/dxp/apps/commerce-demo-pack,\
-        modules/dxp/apps/commerce-punchout
+        modules/dxp/apps/commerce-punchout,\
+        modules/dxp/apps/portal-search-elasticsearch-cross-cluster-replication,\
+        modules/dxp/apps/portal-search-elasticsearch-monitoring,\
+        modules/dxp/apps/portal-search-learning-to-rank
 
     source.check.JavaFinalVariableCheck.enabled=true
 
