LPS-138918 Add portal property to enalbe/disable enterprise search

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -1905,6 +1905,15 @@
     #
     enterprise.product.commerce.enabled=false
 
+    #
+    # Set this property to true to enable use of Liferay Enterprise Search (LES)
+    # applications and features. Your right to use LES is subject to the
+    # applicable end user license agreement covering LES.
+    #
+    # Env: LIFERAY_ENTERPRISE_PERIOD_PRODUCT_PERIOD_ENTERPRISE_PERIOD_SEARCH_PERIOD_ENABLED
+    #
+    enterprise.product.enterprise.search.enabled=true
+
 ##
 ## JavaScript
 ##
