--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -798,6 +798,7 @@ api-account-id=API Account ID
 api-endpoint=API Endpoint
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information.
 api-login-id=API Login ID
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support
 api-url=API URL
 api-username=API User ID
 app-id=App ID
