LPS-139894 Create Placeholders Pages for Raylife

--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/resources/site-initializer/remote-app-entries.json
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/resources/site-initializer/remote-app-entries.json
@@ -13,7 +13,7 @@
 		"portletCategoryName": "category.remote-apps",
 		"properties": {
 			"APPLICATION": "get-a-quote",
-			"GOOGLE_PLACES_KEY": "XXX"
+			"GOOGLE_PLACES_KEY": ""
 		},
 		"remoteAppEntryKey": "RAYLIFE-GET-A-QUOTE",
 		"widgetName": "com_liferay_remote_app_web_internal_portlet_RemoteAppEntryPortlet_[$REMOTE_APP_ENTRY_ID:RAYLIFE-GET-A-QUOTE$]"
