--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/resources/site-initializer/remote-app-entries.json
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/resources/site-initializer/remote-app-entries.json
@@ -17,5 +17,24 @@
 		},
 		"remoteAppEntryKey": "RAYLIFE-GET-A-QUOTE",
 		"widgetName": "com_liferay_remote_app_web_internal_portlet_RemoteAppEntryPortlet_[$REMOTE_APP_ENTRY_ID:RAYLIFE-GET-A-QUOTE$]"
+	},
+	{
+		"cssURLs": "",
+		"elementURLs": [
+			"[$DOCUMENT_URL:/site-initializer/documents/extra/direct-to-customer/js/2.js$]",
+			"[$DOCUMENT_URL:/site-initializer/documents/extra/direct-to-customer/js/main.js$]",
+			"[$DOCUMENT_URL:/site-initializer/documents/extra/direct-to-customer/js/runtime-main.js$]"
+		],
+		"htmlElementName": "liferay-direct-to-customer",
+		"name_i18n": {
+			"en_US": "Direct to Customer - Quote Comparison"
+		},
+		"portletCategoryName": "category.remote-apps",
+		"properties": {
+			"APPLICATION": "quote-comparison",
+			"GOOGLE_PLACES_KEY": ""
+		},
+		"remoteAppEntryKey": "RAYLIFE-QUOTE-COMPARISON",
+		"widgetName": "com_liferay_remote_app_web_internal_portlet_RemoteAppEntryPortlet_[$REMOTE_APP_ENTRY_ID:RAYLIFE-QUOTE-COMPARISON$]"
 	}
 ]
