--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -8931,6 +8931,7 @@ the-log-could-not-be-found=The log could not be found.
 the-logout-redirect-url-is-invalid=The logout redirect URL is invalid.
 the-master-page-was-published-successfully=The master page was published successfully.
 the-maximum-length-is-10-characters=The maximum length is 10 characters.
+the-maximum-length-is-75-characters-for-text-fields=The maximum length is 75 characters for text fields.
 the-maximum-number-of-categories-for-the-vocabulary-has-been-exceeded=The maximum number of categories for the vocabulary has been exceeded.
 the-maximum-number-of-categories-per-vocabulary-is-x=The maximum number of categories per vocabulary is {0}.
 the-maximum-number-of-submissions-allowed-for-this-form-has-been-reached=The maximum number of submissions allowed for this form has been reached.
