LPS-138467 - Add script at root package.json to generate all typescript types

--- a/modules/package.json
+++ b/modules/package.json
@@ -15,7 +15,8 @@
 	},
 	"scripts": {
 		"checkFormat": "liferay-npm-scripts check",
-		"format": "liferay-npm-scripts fix"
+		"format": "liferay-npm-scripts fix",
+		"types": "liferay-npm-scripts types"
 	},
 	"workspaces": {
 		"packages": [
