--- a/modules/dxp/apps/search-experiences/search-experiences-rest-impl/rest-openapi.yaml
+++ b/modules/dxp/apps/search-experiences/search-experiences-rest-impl/rest-openapi.yaml
@@ -1,5 +1,11 @@
 components:
     schemas:
+        DocumentField:
+            properties:
+                values:
+                    items:
+                        type: object
+                    type: array
         HighlightField:
             properties:
                 fragment_offset:
@@ -98,6 +104,12 @@ components:
                                     items:
                                         type: string
                                     type: array
+                                emptySearchEnabled:
+                                    type: boolean
+                                explain:
+                                    type: boolean
+                                includeResponseString:
+                                    type: boolean
                                 searchableAssetTypes:
                                     items:
                                         type: string
@@ -188,14 +200,9 @@ components:
                     items:
                         properties:
                             documentFields:
-                                items:
-                                    properties:
-                                        name:
-                                            type: string
-                                        valueString:
-                                            type: string
-                                    type: object
-                                type: array
+                                additionalProperties:
+                                    $ref: "#/components/schemas/DocumentField"
+                                type: object
                             explanation:
                                 type: string
                             score:
@@ -210,8 +217,12 @@ components:
                     type: integer
                 pageSize:
                     type: integer
+                request:
+                    type: object
                 requestString:
                     type: string
+                response:
+                    type: object
                 responseString:
                     type: string
                 searchRequest:
@@ -230,6 +241,36 @@ info:
     version: v1.0
 openapi: "3.0.1"
 paths:
+    "/search":
+        get:
+            operationId: getSearch
+            parameters:
+                - in: query
+                  name: delta
+                  schema:
+                      type: integer
+                - in: query
+                  name: q
+                  schema:
+                      type: string
+                - in: query
+                  name: start
+                  schema:
+                      type: integer
+                - in: query
+                  name: sxpBlueprint
+                  schema:
+                      type: string
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/SearchResponse"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/SearchResponse"
+            tags: ["SearchResponse"]
     /sxp-blueprints:
         get:
             operationId: getSXPBlueprintsPage
