--- a/test.properties
+++ b/test.properties
@@ -3357,13 +3357,17 @@
 
     test.batch.names[liferay-online]=\
         functional-smoke-tomcat90-mysql57-jdk8,\
-        functional-upgrade-tomcat90-mysql57-jdk8
+        functional-tomcat90-mysql57-jdk8
 
     test.batch.run.property.query[functional-smoke-tomcat90-mysql57-jdk8][liferay-online]=\
         (liferay.online.properties == "true")
 
-    test.batch.run.property.query[functional-upgrade-tomcat90-mysql57-jdk8][liferay-online]=\
-        (data.archive.type == "data-archive-portal-partition")
+    test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][liferay-online]=\
+        (portal.acceptance == true) AND \
+        (\
+            (testray.main.component.name ~ "Liferay Online") OR \
+            (testray.main.component.name ~ "LOL")\
+        )
 
     #
     # Lima
@@ -5956,6 +5960,7 @@
         frontend-infrastructure,\
         headless,\
         liferay-connected-services,\
+        liferay-online,\
         marketplace,\
         object,\
         publications,\
@@ -6080,6 +6085,9 @@
 
     testray.team.liferay-connected-services.component.names=\
         Liferay Connected Services
+
+    testray.team.liferay-online.component.names=\
+        LOL
 
     testray.team.marketplace.component.names=\
         Marketplace,\
