LPS-140130 Add two test stubs for Liferay Online team

--- a/test.properties
+++ b/test.properties
@@ -3365,8 +3365,8 @@
     test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][liferay-online]=\
         (portal.acceptance == true) AND \
         (\
-            (testray.main.component.name ~ "Liferay Online") OR \
-            (testray.main.component.name ~ "LOL")\
+            (testray.main.component.name ~ "LOL") OR \
+            (testray.main.component.name ~ "Liferay Online")\
         )
 
     #
@@ -5811,6 +5811,7 @@
         ${testray.team.headless.component.names},\
         ${testray.team.internal.component.names},\
         ${testray.team.liferay-connected-services.component.names},\
+        ${testray.team.liferay-online.component.names},\
         ${testray.team.marketplace.component.names},\
         ${testray.team.object.component.names},\
         ${testray.team.publications.component.names},\
