--- a/test.properties
+++ b/test.properties
@@ -2078,7 +2078,7 @@
         functional-tomcat90-mysql57-jdk8
 
     test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][analytics-cloud]=\
-        (analytics.cloud.enabled == true AND portal.upstream == afonso) AND \
+        (analytics.cloud.enabled == true AND portal.upstream == true) AND \
         (\
             (testray.main.component.name == "Analytics Cloud")\
         )
