LPS-140346 Add lastLoginDate to REST UserAccount object

--- a/modules/apps/headless/headless-admin-user/headless-admin-user-impl/rest-openapi.yaml
+++ b/modules/apps/headless/headless-admin-user/headless-admin-user-impl/rest-openapi.yaml
@@ -870,6 +870,12 @@ components:
                         type: string
                     readOnly: true
                     type: array
+                lastLoginDate:
+                    description:
+                        The last time the user logged in.
+                    format: date-time
+                    readOnly: true
+                    type: string
                 name:
                     description:
                         The user's full name.
