--- a/modules/apps/template/template-test/build.gradle
+++ b/modules/apps/template/template-test/build.gradle
@@ -5,6 +5,7 @@ dependencies {
 	testIntegrationCompile project(":apps:dynamic-data-mapping:dynamic-data-mapping-test-util")
 	testIntegrationCompile project(":apps:export-import:export-import-test-util")
 	testIntegrationCompile project(":apps:info:info-api")
+	testIntegrationCompile project(":apps:journal:journal-api")
 	testIntegrationCompile project(":apps:journal:journal-test-util")
 	testIntegrationCompile project(":apps:portlet-display-template:portlet-display-template-api")
 	testIntegrationCompile project(":apps:template:template-api")
