LPS-140380 deleteType vs. deletionType, we use both words right now, let's stick with just one

--- a/modules/apps/object/object-admin-rest-impl/rest-openapi.yaml
+++ b/modules/apps/object/object-admin-rest-impl/rest-openapi.yaml
@@ -234,7 +234,7 @@ components:
                         type: object
                     readOnly: true
                     type: object
-                deleteType:
+                deletionType:
                     enum: [cascade, disassociate, prevent]
                     type: string
                 id:
