--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -2615,7 +2615,6 @@ delete-question=Delete question?
 delete-recurring-event=Delete Recurring Event
 delete-refresh-token=Delete Refresh Token
 delete-translations=Delete Translations
-delete-type=Delete Type
 delete-version=Delete Version
 delete-workflow-question=Delete workflow?
 deleting-slas-will-reflect-on-report-data=Deleting SLAs will reflect on report data. This action cannot be undone. Are you sure you want to permanently delete it?
@@ -2623,6 +2622,7 @@ deleting-this-event-will-cancel-the-meeting-with-your-guests=Deleting this event
 deleting-this-event-will-cancel-the-meeting-with-your-guests-would-you-like-to-delete=Deleting this event will cancel the meeting with your guests. Would you like to delete?
 deletion-conflicts-with-a-modification=Deletion conflicts with a modification.
 deletion-modification-conflict=Deletion Modification Conflict
+deletion-type=Deletion Type
 deletions-help-export=If this option is chosen, the delete operations performed for content types will be exported to the LAR file.
 delimiter=Delimiter
 deliver=Deliver
