--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=impersonate you
 oauth2.scope.everything.read=read data on your behalf
 oauth2.scope.everything.write=create/update/delete data on your behalf
 object=Object
+object-action-executor-help[webhook]=Trigger a webhook with a payload.
+object-action-executor[webhook]=Webhook
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated.
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated.
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated.
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated.
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated.
+object-action-trigger-help[onAfterAdd]=An entry was added.
+object-action-trigger-help[onAfterDelete]=An entry was deleted.
+object-action-trigger-help[onAfterUpdate]=An entry was updated.
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update
+object-action-trigger[onAfterAdd]=On After Add
+object-action-trigger[onAfterDelete]=On After Delete
+object-action-trigger[onAfterUpdate]=On After Update
 object-definition-data=Object Data
 object-definition-id=Object ID
 object-definition-table-name=Table Name
@@ -6139,12 +6157,6 @@ occurrences=Occurrences
 october=October
 old-friendly-urls=Old Friendly URLs
 old-role-name-is-a-required-system-role=Old role name is a required system role.
-on-after-add=On After Add
-on-after-add-help=An entry was added.
-on-after-delete=On After Delete
-on-after-delete-help=An entry was deleted.
-on-after-update=On After Update
-on-after-update-help=An entry was updated.
 on-assignment=On Assignment
 on-demand-admin-configuration-name=On-Demand Admin
 on-entry=On Entry
@@ -10221,8 +10233,6 @@ web-plugins=Web Plugins
 web-url=Web URL
 webdav-help=Files and folders can be managed directly from the file explorer of your desktop operating system. <a href="{0}" target="_blank">Read more.</a>
 webdav-windows-help=Files and folders can be managed directly from the file explorer of your desktop operating system. Before accessing from Windows, please ensure you have installed the <a href="{0}" target="_blank">patch</a> from Microsoft. <a href="{1}" target="_blank">Read more.</a>
-webhook=Webhook
-webhook-help=Trigger a webhook with a payload.
 week-starts-on=Week Starts On
 week-view=Week View
 weekday-short-friday=F
