LPS-135356 Most of them are camel case like this

--- a/modules/apps/object/object-admin-rest-impl/rest-openapi.yaml
+++ b/modules/apps/object/object-admin-rest-impl/rest-openapi.yaml
@@ -256,8 +256,8 @@ components:
                 objectDefinitionName2:
                     type: string
                 type:
-                    enum: [one_to_many, many_to_many]
-                    #enum: [one_to_many, one_to_one, many_to_many]
+                    enum: [oneToMany, manyToMany]
+                    #enum: [oneToMany, oneToOne, manyToMany]
                     type: string
         Status:
             properties:
