--- a/portal-impl/src/portal-liferay-online.properties
+++ b/portal-impl/src/portal-liferay-online.properties
@@ -98,6 +98,8 @@ configuration.override.com.liferay.portal.bundle.blacklist.internal.configuratio
     "com.liferay.commerce.punchout.service",\
     "com.liferay.commerce.punchout.web",\
     "com.liferay.commerce.talend.job.deployer.api",\
+    "com.liferay.commerce.theme.minium",\
+    "com.liferay.commerce.theme.minium.full.site.initializer",\
     "com.liferay.commerce.salesforce.connector.talend.job.deployer",\
     "com.liferay.commerce.salesforce.connector.talend.job.deployer.lang",\
     "com.liferay.connected.app.web",\
