LPS-139732 Add logic to avoid references in service.xml (only apply to master)

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -808,4 +808,6 @@
 
     source.check.XMLServiceFinderNameCheck.enabled=true
 
+    source.check.XMLServiceReferenceCheck.avoidReferences=true
+
     source.check.XMLWorkflowDefinitionFileNameCheck.enabled=true
