--- a/modules/apps/template/template-test/build.gradle
+++ b/modules/apps/template/template-test/build.gradle
@@ -7,6 +7,7 @@ dependencies {
 	testIntegrationCompile project(":apps:info:info-api")
 	testIntegrationCompile project(":apps:journal:journal-api")
 	testIntegrationCompile project(":apps:journal:journal-test-util")
+	testIntegrationCompile project(":apps:layout:layout-test-util")
 	testIntegrationCompile project(":apps:portlet-display-template:portlet-display-template-api")
 	testIntegrationCompile project(":apps:template:template-api")
 	testIntegrationCompile project(":core:petra:petra-string")
