LPS-112856 portal-language-lang: New lang keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Add Availability Estimate
 add-billing-address=Add Billing Address
 add-block=Add Block
 add-blog-entry=Add Blog Entry
+add-blueprint=Add Blueprint
 add-bookmark=Add Bookmark
 add-calendar=Add Calendar
 add-calendar-booking=Add Event
@@ -361,6 +362,7 @@ add-document-type=Add Document Type
 add-domain=Add Domain
 add-draft=Add Draft
 add-duplicate-field=Add Duplicate Field {0}
+add-element=Add Element
 add-elements=Add Elements
 add-event=Add Event
 add-existing-account=Add Existing Account
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Are you sure you want 
 are-you-sure-you-want-to-deactivate-the-selected-users=Are you sure you want to deactivate the selected users?
 are-you-sure-you-want-to-deactivate-the-user=Are you sure you want to deactivate the user?
 are-you-sure-you-want-to-deactivate-this-user=Are you sure you want to deactivate this user?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints?
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements?
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Are you sure you want to delete the application? There are no authorizations or associated tokens.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Are you sure you want to delete the application? This actions revokes 1 authorization and associated tokens.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens.
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogs
 blogs-util=Blogs Util
 blogs-util-help=Provides utility methods to access current blog entries.
 blogs-with-this-category=Blogs with This Category
+blueprints=Blueprints
 body-and-image=Body and Image
 body-bg=Body Background
 body-color=Body Color
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type
 filter-by-state=Filter by State
 filter-by-subtype=Filter by Subtype
 filter-by-type=Filter by Type
+filter-by-visibility=Filter by Visibility
 filter-collection=Filter Collection
 filter-contacts=Filter Contacts
 filter-field=Filter Field
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Roles
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Roles Selector
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS Publisher
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML Admin
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Segments Experiment
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Segments Simulation
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segments
@@ -7730,6 +7737,7 @@ search-documents=Search Documents
 search-engine-helper-configuration-name=Engine Helper
 search-engine-optimization=Search Engine Optimization
 search-engine-vendor=Search Engine Vendor
+search-experiences=Search Experiences
 search-for-a-similar-article=Search for a similar article.
 search-for-account=Search for Account
 search-for-an-assignee=Search for an Assignee
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=System Default SAP Entry Name
 system-default-sap-entry-service-signatures=System Default SAP Entry Service Signatures
 system-ldap-configuration-name=Connection
 system-maximum-number-of-tags-per-asset-description=Set the maximum number of tags that will be automatically added to a single asset. Set to 0 if there is no limit.
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted.
 system-roles=System Roles
 system-user-password-sap-entry-description=System User Password SAP Entry Description
 system-user-password-sap-entry-name=System User Password SAP Entry Name
